@@ -1,3 +1,11 @@
+2006-08-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* test/file.c: remove useless test.
+
+	* test/spawn.c: new g_spawn_async_with_pipes test.
+	* src/glib.h: Modified file.
+	* src/gspawn.c: implemented g_spawn_async_with_pipes. Needs fine tuning.
+
 2006-08-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* TODO: Modified file.
